log
Fri Mar 27 05:34:01 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
a2cbc1a
Fri Mar 27 05:51:53 PM UTC 2026: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|6
total_score: 0/60
74b521d
Fri Mar 27 05:57:54 PM UTC 2026: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:85:21: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   85 |         nuevo->prev=lista->current ;
      |                     ^~~~~
      |                     list
list.c:85:21: note: each undeclared identifier is reported only once for each function it appears in
d37d2a3
Fri Mar 27 05:58:09 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
14e1e20
Fri Mar 27 06:16:26 PM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
0af63a1
Fri Mar 27 06:17:19 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
798cce9
Fri Mar 27 06:18:08 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
7e0facf
Fri Mar 27 06:19:15 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
70eb896
